--- a/Association rule mining/libs/Apriori.ipynb
+++ b/Association rule mining/libs/Apriori.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,18 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[[1, 3, 4], [2, 3, 5], [1, 2, 3, 5], [2, 5]]"
-      ]
+      "text/plain": "[[1, 3, 4], [2, 3, 5], [1, 2, 3, 5], [2, 5]]"
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
    ],
    "source": [
@@ -44,22 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[frozenset({1}),\n",
-       " frozenset({2}),\n",
-       " frozenset({3}),\n",
-       " frozenset({4}),\n",
-       " frozenset({5})]"
-      ]
+      "text/plain": "[frozenset({1}),\n frozenset({2}),\n frozenset({3}),\n frozenset({4}),\n frozenset({5})]"
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 4
     }
    ],
    "source": [
@@ -69,18 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[{1, 3, 4}, {2, 3, 5}, {1, 2, 3, 5}, {2, 5}]"
-      ]
+      "text/plain": "[{1, 3, 4}, {2, 3, 5}, {1, 2, 3, 5}, {2, 5}]"
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 5
     }
    ],
    "source": [
@@ -95,22 +85,22 @@
    "metadata": {},
    "source": [
     "Now that you have everything in set form, you can remove items that don’t meet our minimum support."
-   ]
+   ],
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[frozenset({5}), frozenset({2}), frozenset({3}), frozenset({1})]"
-      ]
+      "text/plain": "[frozenset({5}), frozenset({2}), frozenset({3}), frozenset({1})]"
      },
-     "execution_count": 10,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
    "source": [
@@ -120,17 +110,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "frozenset({5}) --> frozenset({2}) conf: 1.0\n",
-      "frozenset({2}) --> frozenset({5}) conf: 1.0\n",
-      "frozenset({1}) --> frozenset({3}) conf: 1.0\n"
-     ]
+     "name": "stdout",
+     "text": "frozenset({5}) --> frozenset({2}) conf: 1.0\nfrozenset({2}) --> frozenset({5}) conf: 1.0\nfrozenset({1}) --> frozenset({3}) conf: 1.0\n"
     }
    ],
    "source": [
@@ -140,17 +126,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[[frozenset({5}), frozenset({2}), frozenset({3}), frozenset({1})],\n [frozenset({2, 3}), frozenset({3, 5}), frozenset({2, 5}), frozenset({1, 3})],\n [frozenset({2, 3, 5})],\n []]"
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "(frozenset({5}), frozenset({2}))"
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "rules[0][:2]"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.3 64-bit ('base': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python37364bitbasecondaaca5070ca1644e5190102fd019577a8c"
   },
   "language_info": {
    "codemirror_mode": {
@@ -162,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
