完成transactions的关联规则挖掘

--- a/Association rule mining/kosarak.ipynb
+++ b/Association rule mining/kosarak.ipynb
@@ -202,12 +202,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 实验报告\n",
-    "实验完成后要求提交实验报告与相应的实验结果\n",
-    "将实验报告和相关实验结果打包上传至服务器上相关目录下：\n",
-    ">    /上传作业/刘昆宏/数据挖掘/实验3/\n",
-    "\n",
-    "实验报告请在实验完成后的第一个双周周日结束前上传"
+    "# 小结\n",
+    "在较大的数据集上跑了两种算法，fpgrowth可以在数分钟内完成关系规则挖掘并且剪枝效率奇高，在阈值较高的情况下居然可以数秒完成；而apriori虽然在前期在小型数据集上测试时表现良好，一旦应用在kosarak上，表现十分差劲，以致于并没有跑出结果。可见，在关联规则挖掘的问题上，确实是fpgrowth算法比较适合。"
    ],
    "execution_count": null,
    "outputs": []
