--- a/Association rule mining/transactions.ipynb
+++ b/Association rule mining/transactions.ipynb
@@ -124,9 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 使用apriori算法挖掘关联规则\n",
-    "记录：\n",
-    "+ 我本地用i7-7700hq的CPU跑了一顿饭的时间没有出结果"
+    "### 使用apriori算法挖掘关联规则"
    ],
    "execution_count": null,
    "outputs": []
@@ -171,10 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 使用fpgrowth算法挖掘关联规则\n",
-    "记录：\n",
-    "+ 10%的支持度阈值，耗时7.6秒\n",
-    "+ 1%的支持度阈值，耗时7min 36s"
+    "### 使用fpgrowth算法挖掘关联规则"
    ],
    "execution_count": null,
    "outputs": []
@@ -233,22 +228,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 小结"
+    "# 小结\n",
+    "Transactions的数据集量级明显比kosarak要小。即使是在这么小的数据集上，fpgrowth算法依然具有平均四倍于apriori的性能。\n",
+    "最早我使用了默认的Support threshold=0.01和Confidence threshold=0.7的默认值，结果一条规则都没有发现。多次调参（炼丹），得到了当前的超参数，应该是比较好的结果：既具有比较高的测度，也有比较大的输出量。"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 实验报告\n",
-    "实验完成后要求提交实验报告与相应的实验结果\n",
-    "将实验报告和相关实验结果打包上传至服务器上相关目录下：\n",
-    ">    /上传作业/刘昆宏/数据挖掘/实验3/\n",
-    "\n",
-    "实验报告请在实验完成后的第一个双周周日结束前上传"
-   ],
-   "execution_count": null,
-   "outputs": []
   }
  ]
 }
